tests/errors/type4.ramen
SELECT IF "true" THEN 1 ELSE 2 AS x;
